<resources>
    <string name="app_name">Apolo Helper</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forget">¿Has Olvidado tu contraseña?</string>
    <string name="name">Nombre</string>
    <string name="arch">Arco:</string>
    <string name="dragonera">Dragonera:</string>
    <string name="club">Club:</string>
    <string name="change_image">Cambiar Imagen</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="login_failed">El registro ha fallado</string>
    <string name="data">Datos Puntuación</string>
    <string name="total_points">Puntos Totales</string>
    <string name="avarage">Promedio de puntos:</string>
    <string name="desviation">Desvición típica:</string>
    <string name="ubication">Ubicación:</string>
    <string name="total_tens">Dieces totales:</string>
    <string name="avarage_tens">Promedio de dieces:</string>
    <string name="summary">Resumen Puntuación</string>
    <string name="save_points">Guardar Puntuación</string>
    <string name="num_arrow">Número de flechas</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string name="action_sign_in" />
    <string name="welcome" />
    <string name="logOut">Cerrar Sesion</string>
</resources>