<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="#E0E0E0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="133dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:text="Nombre demo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonEditPhoto"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_gravity="start"
        android:background="@drawable/orange_background"
        android:elevation="10dp"
        android:enabled="false"
        android:text="@string/change_image"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lineProfile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.245" />

    <View
        android:id="@+id/lineProfile1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="88dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/textViewArch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/arch"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDragonera" />

    <EditText
        android:id="@+id/editTextArch"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/white_background"
        android:ems="10"
        android:hint="Arco demo"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/lineProfile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/textViewArch"
        app:layout_constraintTop_toBottomOf="@+id/textViewDragonera"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textViewDragonera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dragonera"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewClub" />

    <EditText
        android:id="@+id/editTextDragonera"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:background="@drawable/white_background"
        android:ems="10"
        android:hint="Dragonera demo"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewArch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toEndOf="@+id/textViewDragonera"
        app:layout_constraintTop_toBottomOf="@+id/textViewClub"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/textViewClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/club"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineProfile1" />

    <EditText
        android:id="@+id/editTextClub"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/white_background"
        android:hint="Club demo"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDragonera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toEndOf="@+id/textViewClub"
        app:layout_constraintTop_toBottomOf="@+id/lineProfile1"
        app:layout_constraintVertical_bias="0.271" />


    <View
        android:id="@+id/lineProfile2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="64dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewArch"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/buttonEditData"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@drawable/orange_background"
        android:elevation="10dp"
        android:enabled="false"
        android:textColor="@color/gray"
        android:text="@string/save_changes"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineProfile2"
        app:layout_constraintVertical_bias="0.743" />


</androidx.constraintlayout.widget.ConstraintLayout>