<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0E0E0"
        tools:context=".ui.login.LoginActivity"
        tools:visibility="visible">


        <View
            android:id="@+id/orangeBox"
            android:layout_width="0dp"
            android:layout_height="116dp"
            android:background="@color/orange"
            app:layout_constraintBottom_toTopOf="@+id/lineProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewPerfil"
            android:layout_width="147dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="Perfil"
            android:textAlignment="center"
            android:textColor="@color/darkBlue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="172dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle_background"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/archery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/lineProfile1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="80dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintWidth_percent="0.8" />

        <View
            android:id="@+id/lineProfile"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="44dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewArch"
            app:layout_constraintWidth_percent="0.8" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="172dp"
            android:layout_height="51dp"
            android:text="Notificaciones"
            android:textColor="#424B54"
            android:textSize="18sp"
            android:thumbTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineProfile"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/textViewDragoneraInfo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:text="Dragonera demo"
            android:textColor="#424B54"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textViewDragonera"
            app:layout_constraintTop_toBottomOf="@+id/textViewClub" />

        <TextView
            android:id="@+id/textViewDragonera"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="28dp"
            android:text="@string/dragonera"
            android:textColor="#424B54"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.268"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewClub" />

        <TextView
            android:id="@+id/textViewClubInfo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:text="Club demo"
            android:textColor="#424B54"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textViewClub"
            app:layout_constraintTop_toBottomOf="@+id/lineProfile1" />

        <TextView
            android:id="@+id/textViewClub"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="28dp"
            android:text="@string/club"
            android:textColor="#424B54"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineProfile1" />

        <TextView
            android:id="@+id/textViewArch"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="28dp"
            android:text="@string/arch"
            android:textColor="#424B54"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDragonera" />

        <TextView
            android:id="@+id/textViewArchInfo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:text="Arco demo"
            android:textColor="#424B54"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textViewArch"
            app:layout_constraintTop_toBottomOf="@+id/textViewDragonera" />

        <TextView
            android:id="@+id/name"
            android:layout_width="141dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Nombre demo"
            android:textColor="#424B54"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lineProfile1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.107" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/orange_background"
            android:elevation="10dp"
            android:enabled="true"
            android:text="@string/logOut"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orangeBox"
            app:layout_constraintVertical_bias="0.868"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPerfil"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/options" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>